# EchoBird

./: package-lock.json  package.json
.github/workflows/: refresh-pulse-data.yml
docs/: index.html
docs/api/version/: index.json
docs/openrouter/: index.html
docs/pulse/: latest-24h.json  latest-7d-en.json  latest-7d.json
docs/support/: index.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/api/: localServer.ts
src/components/: DownloadContext.tsx
src/components/cards/: ModelCard.tsx  ToolCard.tsx
src/i18n/: en.ts  ja.ts  types.ts  zh-Hans.ts  zh-Hant.ts
src/pages/AppManager/: AppManagerComponents.tsx  AppManagerProvider.tsx  context.ts
src/pages/LocalServer/: LocalServer.tsx
src/pages/MotherAgent/: MotherAgentMain.tsx
src/pages/MyProjects/: MyProjects.tsx  MyProjectsPanel.tsx
tools/hermes/: paths.json
