[package]
name = "echobird"
version = "4.8.4"
description = "The Nexus for Models, Agents & Vibe Coding"
authors = ["Echobird Team"]
license = "MIT"
repository = "https://echobird.ai/"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "echobird_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Closed-source core (private repository, fetched by Cargo at build time).
# Requires read access to github.com/edison7009/EchoBird-secret-.
# On Windows, set CARGO_NET_GIT_FETCH_WITH_CLI=true so Cargo uses git's
# credential helper (gh auth login provides the token); CI uses the
# ECHOBIRD_SECRET_DEPLOY_KEY Actions secret via webfactory/ssh-agent.
echobird_core = { git = "https://github.com/edison7009/EchoBird-secret-.git", branch = "main" }

# Only the public thin shell (src/lib.rs) directly uses `tauri` — for
# `tauri::generate_context!()`, which has to expand against this crate's
# CARGO_MANIFEST_DIR to find tauri.conf.json. Every other Tauri-related
# runtime dependency (plugins called at startup, services, commands) is
# declared by echobird_core.
tauri = { version = "2", features = ["tray-icon"] }

# Tauri plugins whose **permissions** are referenced from capabilities/
# *.json must be direct dependencies of the crate that runs tauri-build
# (this one), even when the runtime initialisation lives in
# echobird_core. tauri-build's permission validator only walks direct
# Cargo dependencies, not transitive ones. capabilities/default.json
# currently uses `shell:allow-open`, so tauri-plugin-shell is the only
# plugin whose permission manifest must be discoverable here.
tauri-plugin-shell = "2"
